<!--
  ~ Copyright (C) 2015 Felix Wiemuth
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">

    <string name="implementation_error">(Implementation error: this should never be visible, please contact developer)</string>

    <string name="app_name" translatable="false">LinCal</string>
    <string name="title_activity_calendar_view">Calendar view</string>
    <string name="title_activity_add_calendar">Add Calendar</string>

    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="dialog_welcome_title">Welcome</string>
    <string name="welcome_message">Welcome to LinCal! This is an early version which might still contain some problems - see \"About\" on how to report them. LinCal is free software (licensed under the GNU General Public License) and comes without any warranty.</string>

    <!-- TRANSLATION NOTE: The following keys are used by the library ckChangeLog and replace the
         default translations it provides. To translate them, first check whether the translations
         provided (see https://github.com/cketti/ckChangeLog/tree/master/ckChangeLog/src/main/res)
         are appropriate and if so copy them here.
      -->
    <string name="changelog_full_title">Change Log</string> <!-- TRANSLATION NOTE: Only translate if appropriate -->
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>

    <!-- The following keys are used by the library LinearFileParser and replace the default
         translations it provides, to better match the application context.
      -->
    <string name="linearfileparser_error_at_line">Error at line\u0020</string>
    <string name="linearfileparser_illegal_line">@string/implementation_error</string>
    <string name="linearfileparser_unknown_section">@string/implementation_error</string>
    <string name="linearfileparser_unknown_key">\"%2$s\" is not a valid command.</string>
    <string name="linearfileparser_repeated_key">The command \"%s\" may only be used once in the header section.</string>
    <string name="linearfileparser_missing_argument">The command \"%s\" requires an argument.</string>

    <string name="crash_toast_text">An unexpected error occurred forcing the application to stop. Please send this email to the developer containing important information about the error. You might add your comments about the problem.</string>

    <string name="parseException_missing_field">Missing field in header section: %s.</string>
    <string name="invalidDisplayModeSpecificationException">Invalid specifier for display mode (valid values are: %s).</string>
    <string name="invalidDateSpecificationException_base">Invalid date specification:</string>
    <string name="invalidDateSpecificationException_expected_full">expected a full date specification (d/m/y)</string>
    <string name="invalidDateSpecificationException_in_header">for the calendar’s date</string>
    <string name="invalidDateSpecificationException_first">as first date</string>
    <string name="invalidDateSpecificationException_format">format error (use d/m/y)</string>
    <string name="dateSpecificationRequiredException">A first date must be specified with "@d d/m/y" before the first entry can be added.</string>
    <string name="invalidTimeSpecificationException_base">Invalid time specification:</string>
    <string name="invalidTimeSpecificationException_format">(use hh:mm)</string>


    <string name="cal_title">Title:</string>
    <string name="cal_title_error_loading">(The calendar could not be loaded due to an error)</string>
    <string name="cal_author">Author:</string>
    <string name="cal_description">Description:</string>
    <string name="cal_version">Version:</string>
    <string name="cal_date">Date:</string>
    <string name="setting_notifications_enabled">Enable notifications</string>
    <string name="setting_show_notifications_earliest">Show notifications earliest:</string>
    <string name="setting_show_notifications_on_screen_on">Show notifications only after screen turned on</string>
    <string name="setting_entry_display_mode_date">Show entry date:</string>
    <string name="setting_entry_display_mode_description">Show entry description:</string>
    <string-array name="setting_entry_display_mode_options">
        <item>Hide all</item>
        <item>Hide future</item>
        <item>Show all</item>
    </string-array>
    <string name="action_remove_cal">Remove calendar</string>
    <string name="entry_hide_date_text" translatable="false">***</string>
    <string name="entry_hide_description_text" translatable="false">***</string>

    <string name="dialog_warning_add_cal_title">Warning</string>
    <string name="dialog_warning_add_cal_msg">Only use calendars from people you trust - opening links to malicious sites is a security risk!</string>
    <string name="add_cal_title">Custom title (leave empty to use calendar\'s title):</string>
    <string name="add_cal_file">Calendar file (full path):</string>
    <string name="add_cal_notifications">Enable notifications</string>
    <string name="add_cal_hideall">Don\'t show any entries now</string>
    <string name="add_cal_file_button">Choose…</string>
    <string name="add_cal_button">Add</string>
    <string name="add_cal_info_title">Note:</string>
    <string name="add_cal_info_1">You can also add a calendar by opening the file directly (using a file manager etc.)</string>
    <string name="add_cal_info_2">Once added, the calendar file has to stay at the same location. This has the advantage that you can simply update a calendar by changing the file, without readding it to LinCal. If, for example, a friend wants to make a calendar for you that they update regularly, they could share it from the cloud and you use an app that synchronizes the file on your device automatically with the one in the cloud. Then your calendar will always be up-to-date. If you want to move a calendar file, you have to remove the calendar from LinCal first and readd it after moving the file.</string>
    <string name="dialog_unsupported_URI_title">Unsupported URI</string>
    <string name="dialog_unsupported_URI_msg">The URI scheme \"%s\" is not supported.</string>
    <string name="dialog_file_not_found">File not found</string>
    <string name="dialog_parsing_error_title">Parsing error</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_dismiss">Close</string>
    <string name="dialog_file_not_found_msg">The file \"%s\" does not exist.</string>
    <string name="dialog_symbol_not_allowed_message">"The symbol \"%s\" is not allowed in a title."</string>
    <string name="dialog_cal_already_added_title">Calendar already added</string>
    <string name="dialog_cal_already_added_msg">The calendar has already been added. Do you want to add another, independent copy?</string>
    <string name="dialog_show_link">Show Link</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_open_link">Open Link</string>
    <string name="dialog_dismiss">Close</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_remove_cal_title">Remove calendar</string>
    <string name="dialog_remove_cal_msg">Remove calendar with settings and current progress? The calendar file itself will not be removed.</string>
    <string name="dialog_downgrade_title">Application downgrade</string>
    <string name="dialog_downgrade_msg">You seem to have used a newer version of LinCal before. The newer format of saving status and configuration of calendars is not compatible with this old version. To use it anyway, the status and configuration of calendars has to be reset, i.e., you have to readd all calendars.</string>
    <string name="dialog_downgrade_yes">Reset configuration</string>
    <string name="dialog_downgrade_no">Close app</string>

    <string name="notification_lincal_error_title">LinCal error</string>
    <string name="notification_lincal_error_description">The following error has occurred while LinCal processed the added calendars to schedule notifications:</string>
    <string name="notification_lincal_error_file_not_found">Note that calendar files may not be moved after added (see help).</string>
</resources>
