<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Felix Wiemuth
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="felixwiemuth.lincal.ui.AddCalendarActivity"
    tools:showIn="@layout/activity_add_calendar">


    <!-- abbreviations in namings: c=calendar, t=text e=EditText b=button c=checkbox -->
    <TextView
        android:id="@+id/ct_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/add_cal_title"/>

    <EditText
        android:id="@+id/ce_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ct_title"/>

    <TextView
        android:id="@+id/ct_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ct_title"
        android:textSize="18sp"
        android:text="@string/add_cal_file"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ce_file"
            android:layout_weight="1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ct_file"/>
        <Button
            android:id="@+id/cb_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ce_file"
            android:text="@string/add_cal_file_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ct_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ce_file"
            android:textSize="18sp"
            android:text="@string/add_cal_notifications"/>
        <CheckBox
            android:id="@+id/cc_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ct_notifications"
            android:checked="true"/>
    </LinearLayout>
    <Button
        android:id="@+id/cb_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ct_notifications"
        android:text="@string/add_cal_button"/>

</LinearLayout>
